Kubernetes/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chatapp-ns
  labels:
    name: chatapp-ingress
  annotations: # Corrected from annotation to annotations
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port: 
              number: 5000
